--- a/statki_o/statki_o.vcxproj
+++ b/statki_o/statki_o.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="funkcje.cpp" />
+    <ClCompile Include="gra.cpp" />
     <ClCompile Include="klasy.cpp" />
     <ClCompile Include="Źródło.cpp" />
   </ItemGroup>
