--- a/statki_o/statki_o.vcxproj.filters
+++ b/statki_o/statki_o.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="funkcje.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="gra.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="klasy.h">
